IOMS-1022: added create API basic things
